--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.7.1</version>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.2</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
